<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameScreen">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/game_main_round" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="84dp"
        android:layout_height="17dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="16dp"
        android:text="@string/Title_Game"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="63dp"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="96dp"
        android:text="@string/player"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lblName"
        android:layout_width="125dp"
        android:layout_height="38dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="115dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="144dp"
        android:text="@string/num_AvaiMoney"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="109dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="188dp"
        android:text="@string/num_GambledMoney"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="128dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="228dp"
        android:text="@string/txt_DiceofGame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/Dice1"
        android:layout_width="44dp"
        android:layout_height="38dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.772"
        app:srcCompat="@drawable/baseline_square" />

    <ImageView
        android:id="@+id/Dice2"
        android:layout_width="44dp"
        android:layout_height="38dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.772"
        app:srcCompat="@drawable/baseline_square" />


    <ImageView
        android:id="@+id/Dice3"
        android:layout_width="44dp"
        android:layout_height="38dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.227"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.772"
        app:srcCompat="@drawable/baseline_square" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="128dp"
        android:layout_height="18dp"
        android:text="@string/txt_selectGambl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.173" />

    <TableLayout
        android:layout_width="196dp"
        android:layout_height="240dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.522">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.662"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.424"
            >

            <TableRow>

                <RadioButton
                    android:id="@+id/Radio01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="01"
                    android:textSize="8dp" />

                <RadioButton
                    android:id="@+id/Radio02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="02"
                    android:textSize="8dp" />

                <RadioButton
                    android:id="@+id/Radio03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="03"
                    android:textSize="8dp" />

                <RadioButton
                    android:id="@+id/Radio04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="04"
                    android:textSize="8dp" />
            </TableRow>

            <TableRow>

                <RadioButton
                    android:id="@+id/Radio05"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="05"
                    android:textSize="8dp" />

                <RadioButton
                    android:id="@+id/Radio06"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="06"
                    android:textSize="8dp" />

                <RadioButton
                    android:id="@+id/Radio07"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="07"
                    android:textSize="8dp" />

                <RadioButton
                    android:id="@+id/Radio08"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="08"
                    android:textSize="8dp" />
            </TableRow>

            <TableRow>

                <RadioButton
                    android:id="@+id/Radio09"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="09"
                    android:textSize="8dp" />

                <RadioButton
                    android:id="@+id/Radio10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10"
                    android:textSize="8dp" />

                <RadioButton
                    android:id="@+id/Radio11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="11"
                    android:textSize="10dp" />

                <RadioButton
                    android:id="@+id/Radio12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12"
                    android:textSize="8dp" />
            </TableRow>

            <TableRow>

                <RadioButton
                    android:id="@+id/Radio13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="13"
                    android:textSize="8dp" />

                <RadioButton
                    android:id="@+id/Radio14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="14"
                    android:textSize="8dp" />

                <RadioButton
                    android:id="@+id/Radio15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="15"
                    android:textSize="8dp" />

                <RadioButton
                    android:id="@+id/Radio16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="16"
                    android:textSize="8dp" />
            </TableRow>

            <TableRow>

                <RadioButton
                    android:id="@+id/Radio17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="17"
                    android:textSize="8dp" />

                <RadioButton
                    android:id="@+id/Radio18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="18"
                    android:textSize="8dp" />

            </TableRow>


        </RadioGroup>
    </TableLayout>

    <Button
        android:id="@+id/Play"
        android:layout_width="165dp"
        android:layout_height="36dp"
        android:layout_marginBottom="28dp"
        android:text="Lanzar Dados"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="74dp"
        android:layout_height="20dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="92dp"
        android:text="@string/txt_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="139dp"
        android:layout_height="143dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_question_mark_24" />

    <EditText
        android:id="@+id/AmountAvailable"
        android:layout_width="125dp"
        android:layout_height="44dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="132dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="2000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/AmountBet"
        android:layout_width="115dp"
        android:layout_height="40dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="188dp"
        android:ems="10"
        android:hint="0"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--

    -->!


</androidx.constraintlayout.widget.ConstraintLayout>